--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -99,3 +99,60 @@
 .right3 {
   transform: translateX(-67.2rem);
 }
+
+/*  ---------- side feature ------------ */
+
+.SideFeatureContainer {
+  background-color: rgba(248, 188, 36, 1);
+  height: 20rem;
+  width: 50rem;
+  border-radius: 15px;
+
+  position: relative;
+}
+
+.SideFeatureInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  position: absolute;
+
+  right: 6rem;
+  top: 4rem;
+}
+
+.SideFeatureInfo p {
+  color: #fff1cc;
+  margin: 0;
+}
+
+.SideTitle {
+  font-size: 35px;
+}
+
+.SideDesc {
+  width: 22rem;
+}
+
+.SideButton {
+  height: 3.5rem;
+  width: 12rem;
+  border-radius: 10px;
+  border: solid 2px #fff1cc;
+  background-color: transparent;
+  color: #fff1cc;
+
+  position: absolute;
+
+  bottom: 2rem;
+  right: 4rem;
+
+  transition: background-color ease 0.1s;
+}
+
+.SideButton:hover {
+  cursor: pointer;
+  background-color: #fff1cc;
+  color: rgba(248, 188, 36, 1);
+}
