--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -1,5 +1,7 @@
 .MainFeatureContainer {
   background-color: rgb(38, 104, 103, 0.6);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   height: 23rem;
   width: 50rem;
 
@@ -64,6 +66,7 @@
 }
 
 .storeButton {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   height: 3rem;
   width: 3rem;
   border-radius: 100%;
@@ -103,6 +106,8 @@
 /*  ---------- side feature ------------ */
 
 .SideFeatureContainer {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   background-color: rgba(248, 188, 36, 1);
   height: 20rem;
   width: 50rem;
@@ -158,6 +163,8 @@
 }
 
 .contactButton {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
   height: 4rem;
   width: 15rem;
   border-radius: 15px;
