--- a/src/styling/About.module.css
+++ b/src/styling/About.module.css
@@ -12,3 +12,18 @@
 .teamContainer {
   width: 40rem;
 }
+
+/* comment block */
+.aboutContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.commentBlockContainer {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: rgb(0, 0, 0, 0.05);
+  border-radius: 10px;
+  width: 36rem;
+  padding: 2rem;
+  color: rgb(100, 100, 100);
+}
