--- a/src/styling/About.module.css
+++ b/src/styling/About.module.css
@@ -27,3 +27,30 @@
   padding: 2rem;
   color: rgb(100, 100, 100);
 }
+
+/* headshots */
+.teamContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: 17rem;
+  justify-content: center;
+}
+.headShotContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.headShotContainer p {
+  margin: 0;
+}
+
+.teamImage {
+  height: 10rem;
+  width: 10rem;
+  border-radius: 100%;
+  background-color: rgb(0, 0, 0, 0.07);
+}
+
+.teamInfo {
+  text-align: center;
+}
