--- a/src/styling/Contact.module.css
+++ b/src/styling/Contact.module.css
@@ -9,6 +9,8 @@
 
 .ContactFormContainer {
   background-color: rgb(0, 0, 0, 0.1);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   height: 25rem;
   width: 50rem;
 
@@ -17,7 +19,9 @@
 
 .description {
   height: 9rem;
-  width: 45rem;
+  width: 38rem;
+  padding-left: 4em;
+  padding-right: 4rem;
   background-color: #fc9c28;
   border-radius: 20px;
   color: #ffe3bf;
