--- a/src/styling/Shop.module.css
+++ b/src/styling/Shop.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   gap: 4rem;
 
   min-height: 100vh;
@@ -18,9 +18,9 @@
 
   min-height: 11rem;
   min-width: 9rem;
-  max-width: 15rem;
+  max-width: 13rem;
   border-radius: 12px;
-  padding: 2rem;
+  padding: 1.5rem;
 }
 
 .MenuContainer button {
