--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -27,7 +27,7 @@
   width: 100%;
   height: 2rem;
   border: none;
-  border-bottom: solid 1px black;
+  border-bottom: solid 1px rgb(0, 0, 0, 0.5);
   outline: none;
 }
 
@@ -46,4 +46,12 @@
   padding-bottom: 0;
   font-size: 15px;
   font-family: inherit;
+}
+
+.technicalAdd {
+  width: 100%;
+  height: 2.5rem;
+  border-radius: 10px;
+  border: solid 1px rgb(0, 0, 0, 0.5);
+  background: transparent;
 }
