--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -42,16 +42,40 @@
 
   transition: all ease 0.4s;
 
+  /* PADDING */
   padding: 1rem;
+
   padding-bottom: 0;
   font-size: 15px;
   font-family: inherit;
 }
 
+.technicalContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
 .technicalAdd {
-  width: 100%;
+  width: 22rem;
   height: 2.5rem;
   border-radius: 10px;
   border: solid 1px rgb(0, 0, 0, 0.5);
   background: transparent;
+
+  margin: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+#technicalButton {
+  width: 24.1rem;
+  height: 2.75rem;
+  transition: all ease 0.15s;
+}
+#technicalNewInput {
+  outline: none;
+}
+#technicalButton:hover {
+  cursor: pointer;
+  background-color: rgb(250, 250, 250);
 }
