--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -31,6 +31,13 @@
   outline: none;
 }
 
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
 .description {
   resize: none;
   width: 22rem;
@@ -53,7 +60,7 @@
 .technicalContainer {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 .technicalAdd {
   width: 22rem;
