--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -82,7 +82,8 @@
 #technicalNewInput {
   outline: none;
 }
-#technicalButton:hover {
+#technicalButton:hover,
+#optionButton:hover {
   cursor: pointer;
   background-color: rgb(250, 250, 250);
 }
@@ -110,4 +111,51 @@ point
 .pointRemove:hover {
   background-color: red;
   cursor: pointer;
+}
+
+/* ----------
+selection
+--------- */
+.selection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+/* -- selection item -- */
+.selectionItemContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+}
+
+.selectionOptionContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 0.5rem;
+}
+
+.selectionSelection,
+.selectionContainer {
+  width: 22rem;
+  height: 2.5rem;
+  border-radius: 10px;
+  border: solid 1px rgb(0, 0, 0, 0.5);
+  background: transparent;
+
+  margin: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+#optionButton {
+  width: 20rem;
+  transition: all ease 0.15s;
+}
+
+.selectioMainContainer {
+  position: relative;
 }
