--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -159,3 +159,9 @@ selection
 .selectioMainContainer {
   position: relative;
 }
+
+.addSelectionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
