--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  /* align-items: center; */
   gap: 4rem;
 
   min-height: 91vh;
