--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -207,3 +207,48 @@ sku
   color: black;
   /* margin-bottom: ; */
 }
+
+/* --------------------------------------
+Image Container 
+---------------------------------------*/
+
+.imageContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  gap: 10px;
+}
+.imageButton {
+  background-color: transparent;
+  border: none;
+  position: relative;
+  z-index: 5;
+  padding: 0;
+  margin: 0;
+}
+.imageButton:hover {
+  cursor: pointer;
+}
+.imageButton div {
+  height: 100px;
+  width: 130px;
+  border-radius: 10px;
+  position: absolute;
+  z-index: 4;
+  background-color: rgb(0, 0, 0, 0);
+
+  transition: all ease 0.5;
+}
+.imageButton p {
+  position: absolute;
+  margin: 0;
+  top: 42%;
+  left: 34%;
+  color: rgba(255, 255, 255, 0);
+  z-index: 5;
+  transition: all ease 0.5;
+}
+.image {
+  border-radius: 10px;
+  padding: 0;
+  margin: 0;
+}
