--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -7,6 +7,13 @@
   min-height: 91vh;
 }
 
+.itemPreview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
 .CreateFormContainer {
   display: flex;
   flex-direction: column;
@@ -251,4 +258,11 @@ Image Container
   border-radius: 10px;
   padding: 0;
   margin: 0;
+}
+
+/* --------------------------------------
+Image preview 
+---------------------------------------*/
+.mainImage {
+  border-radius: 15px;
 }
