--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -310,3 +310,137 @@ Image preview
   border-radius: 15px;
   background-color: rgb(230, 230, 230);
 }
+
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  z-index: 100;
+  background-color: rgb(0, 0, 0, 0.5);
+}
+
+.addImageModal {
+  height: 40rem;
+  width: 30rem;
+  top: 6rem;
+  left: 30rem;
+  background-color: white;
+  position: fixed;
+  z-index: 101;
+  border-radius: 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imageInput {
+  display: none;
+}
+
+.imageInputForm {
+  height: 20rem;
+  width: 100%;
+  position: relative;
+}
+
+.imageInputLabel {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  background-color: rgb(220, 220, 220);
+  text-align: center;
+}
+
+.imageInputLabel:hover {
+  cursor: pointer;
+}
+
+.imageModalInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 20rem;
+  gap: 2rem;
+}
+.modalInputSpan {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+}
+
+.modalInputSpan label {
+  margin-left: -5px;
+}
+.imageModalInfoInput {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.modalInput {
+  width: 22rem;
+  height: 2.5rem;
+  border: none;
+  border-bottom: solid 1px rgb(0, 0, 0, 0.5);
+  outline: none;
+  font-size: 15px;
+}
+
+.imageModalImages {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.imageModalImagesContainer {
+  height: 20rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
+}
+.imageModalImagesTwo {
+  height: 18rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.imageModalImagesThree {
+  height: 10rem;
+  width: 20rem;
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  gap: 10px;
+}
+.imageOne,
+.imageTwo,
+.imageThree {
+  border-radius: 10px;
+}
+
+.imageTwo {
+  height: 200px;
+  width: 200px;
+}
+
+.imageThree {
+  height: 100px;
+  width: 100px;
+}
+
+.imageModalButtons {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
