--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -45,14 +45,31 @@
   align-items: center;
   gap: 1.5rem;
 }
+
+/* ----------------------
+description styling
+---------------------- */
+.descriptionContainer {
+  position: relative;
+}
+
+.descriptionContainer label {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  color: rgb(0, 0, 0, 0);
+  transition: all ease 0.1s;
+}
+
 .description {
   resize: none;
   width: 22rem;
   border-radius: 10px;
+
   /* border: none; */
   /* border-bottom: solid 1px black; */
   outline: none;
-  height: 2rem;
+  min-height: 2rem;
 
   transition: all ease 0.4s;
 
