--- a/src/styling/Product.module.css
+++ b/src/styling/Product.module.css
@@ -27,11 +27,33 @@ image
   border-radius: 10px;
   height: 35rem;
   width: 30rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+/* Main Image */
 
 .SubImageContainer {
-  background-color: rgb(0, 0, 0, 0.2);
   border-radius: 10px;
   height: 35rem;
   width: 5rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 0.4rem;
+}
+
+/* Sub Image Item  */
+.SubImageImg,
+.SubImageButton {
+  height: 5rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  background-color: rgb(200, 200, 200);
+}
+
+.SubImageButton:hover {
+  cursor: pointer;
 }
