display flex for product info

--- a/src/styling/Product.module.css
+++ b/src/styling/Product.module.css
@@ -9,6 +9,10 @@
   position: relative;
 }
 
+.ProductInfo {
+  display: flex;
+  gap: 1rem;
+}
 /* --------------------------------
 image
 ---------------------------------*/
