--- a/src/styling/Cart.module.css
+++ b/src/styling/Cart.module.css
@@ -1,3 +1,6 @@
+/* ------------------------------------------
+backdrop
+-------------------------------------------*/
 .BackDrop {
   visibility: hidden;
   background-color: rgb(0, 0, 0, 0);
@@ -18,4 +21,101 @@
 
 .ActiveBackDrop:hover {
   cursor: pointer;
+}
+
+/* ------------------------------------------
+Cart
+-------------------------------------------*/
+
+.CartContainer {
+  position: fixed;
+  margin-top: -9rem;
+  right: -33rem;
+  height: 100vh;
+  width: 30rem;
+  padding: 1rem;
+  background-color: white;
+
+  z-index: 2000;
+
+  transition: transform ease 0.5s;
+}
+
+.CartActive {
+  transform: translateX(-33rem);
+  z-index: 2000;
+}
+
+.CartTitle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 2rem;
+}
+.CartTitle p {
+  margin: 0;
+}
+.Xbutton {
+  height: 2.5rem;
+  width: 2.5rem;
+  border: none;
+  border-radius: 10px;
+}
+
+.CartCheckout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.CheckoutButton {
+  border: none;
+  width: 38rem;
+  height: 3.5rem;
+  border-radius: 10px;
+}
+
+.CheckoutButton:hover,
+.Xbutton:hover {
+  cursor: pointer;
+  background-color: rgb(230, 230, 230);
+}
+
+.CartItemDisplay {
+  height: 80%;
+  overflow-x: scroll;
+}
+
+/* Cart Item */
+
+.CartItemContainer {
+  width: 100%;
+  height: 7rem;
+
+  display: flex;
+  justify-content: space-between;
+
+  align-items: center;
+}
+
+.ItemImage {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 10px;
+  background-color: rgb(230, 230, 230);
+}
+
+.Iteminfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.ItemInfoContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: -8rem;
 }
