--- a/src/styling/Cart.module.css
+++ b/src/styling/Cart.module.css
@@ -39,6 +39,10 @@ Cart
   z-index: 2000;
 
   transition: transform ease 0.5s;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .CartActive {
@@ -52,7 +56,7 @@ Cart
   justify-content: space-between;
   padding-left: 1rem;
   padding-right: 1rem;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 .CartTitle p {
   margin: 0;
@@ -68,12 +72,12 @@ Cart
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1rem;
 }
 .CheckoutButton {
   border: none;
   width: 38rem;
   height: 3.5rem;
+  margin-bottom: 1.5rem;
   border-radius: 10px;
 }
 
@@ -84,15 +88,18 @@ Cart
 }
 
 .CartItemDisplay {
-  height: 80%;
+  flex-grow: 1;
   overflow-x: scroll;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
 }
 
 /* Cart Item */
 
 .CartItemContainer {
   width: 100%;
-  height: 7rem;
+  height: 8.5rem;
 
   display: flex;
   justify-content: space-between;
@@ -101,10 +108,14 @@ Cart
 }
 
 .ItemImage {
-  height: 7rem;
-  width: 7rem;
+  height: 8.5rem;
+  width: 8.5rem;
   border-radius: 10px;
   background-color: rgb(230, 230, 230);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Iteminfo {
@@ -116,6 +127,71 @@ Cart
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin-left: -8rem;
+  margin-left: -10rem;
+  gap: 0.7rem;
+  justify-content: center;
+}
+
+.category {
+  font-size: 12px;
+  color: rgb(130, 130, 130);
+}
+
+.ItemQuantity {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.Quanity {
+  background-color: rgb(240, 240, 240);
+  width: 1.5rem;
+  height: 1.5rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 5px;
+
+  margin: 0;
+}
+
+.ItemMinus {
+  height: 1.4rem;
+  width: 1.4rem;
+  margin: 0;
+  border: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgb(230, 230, 230);
+  border-radius: 5px;
+}
+
+.ItemMinus:hover,
+.Remove:hover,
+.Heart:hover {
+  cursor: pointer;
+}
+.price {
+  font-size: 20px;
+}
+
+.MisButton {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.Remove,
+.Heart {
+  border: none;
+  background-color: rgb(230, 230, 230);
+  border-radius: 5px;
+
+  height: 2rem;
+  width: 2rem;
 }
