--- a/src/styling/Cart.module.css
+++ b/src/styling/Cart.module.css
@@ -77,7 +77,7 @@ Cart
   border: none;
   width: 38rem;
   height: 3.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   border-radius: 10px;
 }
 
@@ -202,4 +202,20 @@ Cart
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#NewInfoContainer {
+  background-color: rgba(48, 172, 133, 0.5);
+  width: 25rem;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.CheckMark {
+  background-color: rgb(77, 168, 139);
+
+  height: 3rem;
+  width: 3rem;
+  border-radius: 100%;
+  margin-left: 4rem;
 }
