--- a/src/styling/Checkout.module.css
+++ b/src/styling/Checkout.module.css
@@ -6,3 +6,42 @@
 
   min-height: 91vh;
 }
+
+.ItemDisplay {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+.ItemContainer {
+  width: 34rem;
+  height: 7.5rem;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: rgb(235, 235, 235);
+
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+}
+
+.ImageContainer {
+  height: 100%;
+  width: 8rem;
+  border-radius: 10px;
+  background-color: rgb(200, 200, 200);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.InfoContainer {
+  height: 100%;
+  margin-left: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.InfoContainer p {
+  margin: 0;
+}
