--- a/src/styling/Checkout.module.css
+++ b/src/styling/Checkout.module.css
@@ -22,6 +22,7 @@
   display: flex;
   padding: 1rem;
   align-items: center;
+  position: relative;
 }
 
 .ImageContainer {
@@ -44,4 +45,54 @@
 
 .InfoContainer p {
   margin: 0;
+}
+
+.name {
+  font-size: 19px;
+}
+.category {
+  font-size: 14px;
+  color: rgb(120, 120, 120);
+}
+
+.PriceContainer {
+  font-size: 20px;
+}
+
+.MisButtonContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  position: absolute;
+  right: 2rem;
+}
+.MisButton {
+  height: 2rem;
+  width: 2rem;
+  border: none;
+  background-color: rgb(200, 200, 200);
+  border-radius: 5px;
+}
+
+.QuantityContainer {
+  display: flex;
+  gap: 0.5rem;
+}
+.quantityButton {
+  height: 1.4rem;
+  width: 1.4rem;
+  margin: 0;
+  border: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgb(200, 200, 200);
+  border-radius: 5px;
+}
+
+.quantityButton:hover,
+.MisButton:hover {
+  cursor: pointer;
 }
