--- a/src/styling/Checkout.module.css
+++ b/src/styling/Checkout.module.css
@@ -7,16 +7,21 @@
   min-height: 91vh;
 }
 
+/* ---------------------------------
+Checkout ITEMS
+--------------------------------- */
+
 .ItemDisplay {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 1rem;
 }
 .ItemContainer {
   width: 34rem;
   height: 7.5rem;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   background-color: rgb(235, 235, 235);
 
   display: flex;
@@ -94,5 +99,63 @@
 
 .quantityButton:hover,
 .MisButton:hover {
+  cursor: pointer;
+}
+
+/* ---------------------------------
+Checkout ORDER DETAILS
+--------------------------------- */
+.ReviewOrderContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.CheckoutPriceContainer {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 10px;
+  width: 18rem;
+  padding: 1.5rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.CheckoutPriceContainer p {
+  margin: 0;
+}
+
+.CalculateContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.CalculateName,
+.CalculateShipping,
+.CalculateTaxes,
+.TotalContainerSub {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.linebreak {
+  height: 1px;
+  width: 100%;
+  background-color: rgb(50, 50, 50);
+}
+
+.ReviewTitle {
+  font-size: 20px;
+  margin-bottom: 1.5rem;
+}
+
+.CheckoutButton {
+  height: 2.5rem;
+  border-radius: 5px;
+  border: none;
+}
+
+.CheckoutButton:hover {
   cursor: pointer;
 }
