--- a/src/styling/Product.module.css
+++ b/src/styling/Product.module.css
@@ -55,6 +55,11 @@ image
   border-radius: 10px;
   border: none;
   background-color: rgb(200, 200, 200);
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .SubImageButton:hover {
