--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -77,10 +77,12 @@
   transition: background-color ease 0.1s;
 }
 
-.storeButton:hover {
+.storeButton:hover,
+.CaruselButton:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.2);
 }
+
 .storeCarousel {
   overflow: hidden;
 }
@@ -176,4 +178,80 @@
 .contactButton:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* new carousel */
+
+.CaruselButton {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 100%;
+  border: none;
+
+  transition: background-color ease 0.1s;
+}
+
+.CaruselContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  /* background-color: azure; */
+
+  height: 15.5rem;
+}
+
+.CaruselDisplay {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 50.4rem;
+  height: 17.2rem;
+
+  /* background-color: aliceblue; */
+  margin-left: 2.25rem;
+  margin-right: 2.25rem;
+
+  overflow: hidden;
+
+  border-radius: 5px;
+}
+
+.StoreCarouselItemContainer {
+  height: 17.2rem;
+  width: 16.3rem;
+
+  margin-left: 4px;
+  margin-right: 4px;
+  border-radius: 5px;
+}
+
+.CaruselDisplaySub {
+  display: flex;
+  transition: all ease-in-out 0.55s;
+  /* transform: translateX(-50.4rem); */
+}
+
+.CaruselItemImage {
+  width: 100%;
+  height: 15.5rem;
+  background-color: rgb(240, 240, 240);
+
+  border-radius: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.CaruselItemInfo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.CaruselItemInfo p {
+  margin: 0;
+  margin-top: 0.1rem;
 }
