added store carusel to product page

--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -246,6 +246,10 @@
   align-items: center;
 }
 
+.CaruselItemImage:hover {
+  cursor: pointer;
+}
+
 .CaruselItemInfo {
   display: flex;
   justify-content: space-between;
