--- a/src/styling/User.module.css
+++ b/src/styling/User.module.css
@@ -81,7 +81,7 @@ User page
 }
 
 .UserInfo {
-  height: 23rem;
+  min-height: 23rem;
   width: 50rem;
   display: flex;
 }
@@ -100,7 +100,7 @@ User page
 /* Info Display */
 
 .UserInfoContainer {
-  height: 23rem;
+  min-height: 23rem;
   width: 100%;
   border-radius: 10px;
 
@@ -145,4 +145,67 @@ User page
   margin-left: 4rem;
   margin-top: 2rem;
   font-size: 20px;
+}
+
+/* favorite item */
+.FavoriteDisplay {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 2.5rem;
+}
+.FavoriteItemContainer {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 1.5rem;
+  background-color: rgb(230, 230, 230);
+  padding: 1rem;
+  width: 32.5rem;
+  border-radius: 10px;
+}
+
+.FavoriteImage {
+  height: 7rem;
+  width: 7rem;
+  background-color: rgb(200, 200, 200);
+  border-radius: 10px;
+}
+
+.FavoriteInfoContainer {
+  min-width: 20rem;
+}
+.FavoriteButton {
+  height: 7rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.FavName {
+  font-size: 16px;
+}
+.FavCat {
+  font-size: 12px;
+  color: rgb(100, 100, 100);
+}
+.FavPriceContainer p {
+  margin-top: 1rem;
+  font-size: 23px;
+}
+
+.FavButton {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  margin-right: 3.5rem;
+}
+.FavButton:hover {
+  cursor: pointer;
 }
