--- a/src/styling/User.module.css
+++ b/src/styling/User.module.css
@@ -174,6 +174,9 @@ User page
   width: 7rem;
   background-color: rgb(200, 200, 200);
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .FavoriteInfoContainer {
