--- a/src/styling/Review.module.css
+++ b/src/styling/Review.module.css
@@ -81,3 +81,38 @@ Review Form
   display: flex;
   justify-content: center;
 }
+
+/* -------------------------------
+Review Form 
+------------------------------- */
+.ReviewItemContainer {
+  display: flex;
+  align-items: flex-start;
+
+  gap: 1.25rem;
+  background-color: rgb(240, 240, 240);
+  padding: 1rem;
+  border-radius: 10px;
+  margin: 0;
+}
+
+.ReviewItemContainer p {
+  margin: 0;
+}
+
+.ReviewItemInfo {
+  height: 120px;
+}
+.name {
+  font-size: 16px;
+}
+
+.cat {
+  font-size: 12px;
+  color: rgb(100, 100, 100);
+}
+
+.price {
+  margin-top: 1rem;
+  font-size: 23px;
+}
