--- a/src/styling/Product.module.css
+++ b/src/styling/Product.module.css
@@ -20,9 +20,10 @@ image
 .ImageContainer {
   display: flex;
   gap: 0.5rem;
-  position: relative;
-  position: -webkit-sticky;
+
   position: sticky;
+  top: 1rem;
+  align-self: flex-start;
 }
 
 /* Main Image Container (big image)*/
@@ -61,6 +62,8 @@ image
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: transparent;
 }
 
 .SubImageButton:hover {
