--- a/src/styling/Shop.module.css
+++ b/src/styling/Shop.module.css
@@ -43,12 +43,12 @@
   display: grid;
   grid-template-columns: repeat(3, 33%);
   justify-content: center;
-  gap: 0.75rem;
+  gap: 1rem;
 }
 
 /* ---------- store item ---------- */
 .ItemContainer {
-  height: 15rem;
+  height: 16rem;
   border-radius: 10px;
   border: none;
   padding: 0;
@@ -62,8 +62,7 @@
 }
 
 .Image {
-  background-color: rgb(200, 200, 200);
-  height: 12rem;
+  height: 13rem;
   width: 100%;
 
   border-top-right-radius: 10px;
@@ -80,4 +79,35 @@
   justify-content: space-between;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.LoadingSkeleton {
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+  }
+
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
+
+.LoadingBar {
+  height: 0.65rem;
+  width: 5rem;
+  border-radius: 10px;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.LoadingInfo {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 3.4rem;
+  border-radius: 10px;
+  flex-direction: column;
+  gap: 0.5rem;
 }
