--- a/src/styling/Product.module.css
+++ b/src/styling/Product.module.css
@@ -1,11 +1,11 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 5rem;
 
-  min-height: 91vh;
+  min-height: 81vh;
 }
 
 .ProductInfo {
