--- a/src/styling/Cart.module.css
+++ b/src/styling/Cart.module.css
@@ -90,8 +90,9 @@ Cart
 
 .CartItemDisplay {
   flex-grow: 1;
-  overflow-x: scroll;
   display: flex;
+  overflow-y: scroll;
+  overflow-x: hidden;
   gap: 1.5rem;
   flex-direction: column;
   padding-top: 1rem;
