fixed add image modal

--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -333,10 +333,10 @@ Image preview
 }
 
 .backdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  width: 100%;
   height: 100%;
   z-index: 100;
   background-color: rgb(0, 0, 0, 0.5);
@@ -345,17 +345,20 @@ Image preview
 .addImageModal {
   height: 40rem;
   width: 30rem;
-  position: fixed;
   background-color: white;
-
-  z-index: 101;
   border-radius: 20px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.centerDiv {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 101;
+}
 .imageInput {
   display: none;
 }
