--- a/src/styling/Admin.module.css
+++ b/src/styling/Admin.module.css
@@ -377,10 +377,30 @@ Image preview
   border-top-left-radius: 20px;
   background-color: rgb(220, 220, 220);
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .imageInputLabel:hover {
   cursor: pointer;
+}
+
+.imageInputLabelSpan {
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  border: solid 2px white;
+  padding: 0.4rem;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 1.5rem;
+  transition: all ease 0.2s;
+}
+.imageInputLabelSpan:hover {
+  color: rgb(220, 220, 220);
+  background-color: white;
+  border: solid 2px rgb(220, 220, 220);
 }
 
 .imageModalInfo {
@@ -473,6 +493,31 @@ Image preview
 
 .descriptionError {
   border: solid 1px red;
+}
+
+.imageCancelButton,
+.imageAddButton {
+  font-size: 13px;
+  transition: all ease 0.2s;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+  border-radius: 5px;
+}
+.imageCancelButton {
+  border: none;
+  background-color: transparent;
+}
+.imageCancelButton:hover,
+.imageAddButton:hover {
+  background-color: rgb(240, 240, 240);
+  cursor: pointer;
+}
+
+.imageAddButton {
+  border: none;
+  background-color: rgb(230, 230, 230);
 }
 
 /* ---------- category ------------- */
