--- a/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
+++ b/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
@@ -8,6 +8,7 @@
 .ImageMainpulation {
   height: 90vh;
   width: 80vw;
+  max-width: 50rem;
   background-color: rgb(30, 30, 30);
   border-radius: 20px;
   position: relative;
@@ -17,6 +18,22 @@
   align-items: center;
 }
 
+/* ---------------------------------
+Image Container
+--------------------------------- */
+.ImageContainer {
+  height: 580;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+/* ---------------------------------
+buttons
+--------------------------------- */
 .cancelButton,
 .saveButton {
   position: absolute;
@@ -26,19 +43,14 @@
 .cancelButton {
   top: 5px;
   right: 5px;
-
   height: 3rem;
   width: 3rem;
-
   border-radius: 100px;
   border: none;
-
   display: flex;
   justify-content: center;
   align-items: center;
-
   font-size: 30px;
-
   background-color: transparent;
 }
 
