--- a/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
+++ b/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
@@ -4,6 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 201;
+  overflow: hidden;
 }
 .ImageMainpulation {
   height: 90vh;
@@ -22,13 +23,13 @@
 Image Container
 --------------------------------- */
 .ImageContainer {
-  height: 580;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /* ---------------------------------
@@ -38,6 +39,7 @@ buttons
 .saveButton {
   position: absolute;
   transition: all ease 0.2s;
+  z-index: 1000;
 }
 
 .cancelButton {
@@ -79,4 +81,79 @@ buttons
 .saveButton:hover {
   background-color: rgb(250, 250, 250, 0.7);
   cursor: pointer;
+}
+
+.imageOne {
+  touch-action: none;
+  position: absolute;
+  pointer-events: all;
+}
+.imageOne:hover {
+  cursor: grab;
+}
+.imageOne:active {
+  cursor: grabbing;
+}
+.imageLimitContainer {
+  pointer-events: none;
+  position: absolute;
+  height: 30rem;
+  width: 30rem;
+  border: solid 2px rgb(230, 230, 230);
+}
+
+.topLeft,
+.topRight,
+.botRight,
+.botLeft {
+  height: 1.5rem;
+  width: 1.5rem;
+  position: absolute;
+  z-index: 1;
+
+  pointer-events: all;
+}
+
+.topLeft:hover,
+.botRight:hover {
+  cursor: nwse-resize;
+}
+
+.topRight:hover,
+.botLeft:hover {
+  cursor: nesw-resize;
+}
+
+.topRight {
+  top: -0rem;
+  right: -0rem;
+  box-shadow: 5px -5px white;
+}
+.topLeft {
+  top: -0rem;
+  left: -0rem;
+
+  box-shadow: -5px -5px white;
+}
+.botRight {
+  bottom: -0rem;
+  right: -0rem;
+  box-shadow: 5px 5px white;
+}
+.botLeft {
+  bottom: -0rem;
+  left: -0rem;
+  box-shadow: -5px 5px white;
+}
+
+.hideTopLeft {
+  height: 1.5rem;
+  width: 1.5rem;
+  position: absolute;
+  background-color: transparent;
+  /* background-color: black; */
+}
+
+.Svg {
+  pointer-events: none;
 }
