added cursor styling consistency for resizing

--- a/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
+++ b/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
@@ -30,6 +30,7 @@ Image Container
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  user-select: none;
 }
 
 /* ---------------------------------
@@ -87,6 +88,7 @@ buttons
   touch-action: none;
   position: absolute;
   pointer-events: all;
+  user-select: none;
 }
 .imageOne:hover {
   cursor: grab;
