--- a/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
+++ b/src/components/AdminPage/ImageComponents/ImageMainpulation.module.css
@@ -31,6 +31,7 @@ Image Container
   align-items: center;
   overflow: hidden;
   user-select: none;
+  /* position: relative; */
 }
 
 /* ---------------------------------
@@ -99,22 +100,14 @@ buttons
 .imageLimitContainer {
   pointer-events: none;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  min-width: 11rem;
+  min-height: 11rem;
   width: 30rem;
   height: 30rem;
   border: solid 2px rgb(230, 230, 230);
-
-  transition: top ease 0.2s;
-  transition: left ease 0.2s;
+  will-change: auto;
 }
 
-.centerDiv {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 .topLeft,
 .topRight,
 .botRight,
