--- a/src/styling/About.module.css
+++ b/src/styling/About.module.css
@@ -50,6 +50,9 @@
   border-radius: 100%;
   background-color: rgb(0, 0, 0, 0.07);
 }
+.teamImage:hover {
+  cursor: pointer;
+}
 
 .teamInfo {
   text-align: center;
